# Diagonal

./: CMakeLists.txt  LICENSE  README  Toolchain-i686-w64-mingw32.cmake  Toolchain-x86_64-w64-mingw32.cmake  config.h.cmake
cmake/modules/: FindICU.cmake
doc/: .gitignore  coding-style.txt  index.org  reference-manual.org  tutorial.org
src/: CMakeLists.txt  bytevector.c  cluster.c  code.c  dataset.c  datum.c  deque.c  diag-avg.c  diag-cycle.c  diag-dec.c  diag-enc.c  diag-file.c  diag-fix.c  diag-hash.c  diag-imf.c  diag-line.c  diag-log.c  diag-mean.c  diag-medi.c  diag-mode.c  diag-pool.c  diag-rep.c  diag-repeat.c  diag-root.c  diag-times.c  diag-uniq.c  diag.c  diagonal.c  diagonal.h  filesystem.c  hamming.c  hash.c  hashtable.c  imf.c  lcs.c  levenshtein.c  line.c  list.c  memory.c  pair.c  (+10 more)
src/diagonal/: bytevector.h  cluster.h  cmp.h  dataset.h  datum.h  deque.h  hash.h  hashtable.h  imf.h  lcs.h  line.h  list.h  metric.h  mime.h  object.h  pair.h  port.h  qselect.h  rbtree.h  set.h  singlelinkage.h  trie.h  vcdiff.h  vector.h
src/diagonal/cluster/: single.c
src/diagonal/private/: filesystem.h  memory.h  system.h  temporary-file.h
test/: CMakeLists.txt  test.h.cmake
test/bytevector/: CMakeLists.txt  diag_bytevector_new_heap.c  diag_bytevector_new_path.c  diag_bytevector_to_asciz.c
test/datum/: CMakeLists.txt  diag_datum.c  diag_datum_t.c
test/deque/: CMakeLists.txt  diag_deque_append.c  diag_deque_push_and_pop.c  diag_deque_to_array.c
test/diag/: CMakeLists.txt  diag-command-average.sh.in  diag-command-avg.sh.in  diag-command-cycle.sh.in  diag-command-fix.sh.in  diag-command-mean.sh.in  diag-command-root.sh.in  diag-option-l.sh.in
test/diag-avg/: CMakeLists.txt  diag-avg-avg.c  diag-avg-cat.sh.in  diag-avg-null.sh.in  diag-avg-one.sh.in  diag-avg-pid.c  diag-avg-pid.sh.in  diag-avg-true.sh.in  diag-avg-two.sh.in
test/diag-cycle/: CMakeLists.txt  collatz.c  diag-cycle-add2.sh.in  diag-cycle-cat.sh.in  diag-cycle-collatz.sh.in  diag-cycle-zero.sh.in
test/diag-fix/: CMakeLists.txt  diag-fix-add2.sh.in  diag-fix-cat.sh.in  diag-fix-zero.sh.in
test/diag-mean/: CMakeLists.txt  diag-mean-null.sh.in  diag-mean-one.sh.in  diag-mean-two.sh.in
test/diag-medi/: CMakeLists.txt  diag-medi-1000.sh.in  diag-medi-1001.sh.in  diag-medi-null.sh.in  diag-medi-one.sh.in  diag-medi-two.sh.in  median-rand.c
test/diag-mode/: CMakeLists.txt  diag-mode-multi.sh.in  diag-mode-null.sh.in  diag-mode-one.sh.in  diag-mode-three.sh.in
test/diag-rep/: CMakeLists.txt  diag-rep-head.sh.in  diag-rep-head0.sh.in  diag-rep-head1.sh.in
test/diag-repeat/: CMakeLists.txt  diag-repeat-head.sh.in
test/diag-root/: CMakeLists.txt  diag-root-cat.sh.in
test/diag-times/: CMakeLists.txt  diag-times-cat.sh.in  diag-times-sed-input.txt  diag-times-sed-output.txt  diag-times-sed.sh.in
test/hamming/: CMakeLists.txt  diag_ehamming_chars.c  diag_hamming_chars.c
test/hash/: CMakeLists.txt  diag_hash32_adler32.c  diag_hash32_rabin_karp.c  diag_hash64_rabin_karp.c  diag_rolling_hash32_collect.c  diag_rollinghash32_collect.c
test/hashtable/: CMakeLists.txt  diag_hashtable_size.c
test/imf/: CMakeLists.txt  diag_imf_parse.c
test/lcs/: CMakeLists.txt  diag_lcs_compute_default.c
test/levenshtein/: CMakeLists.txt  diag_elevenshtein_chars.c  diag_levenshtein_chars.c
test/life/: 1x1.sh.in  40x80.sh.in  40x80.txt  6x6-glider.fix.txt  6x6-glider.sh.in  6x6-glider.txt  CMakeLists.txt  life.c
test/line/: CMakeLists.txt  diag_line_read.c
test/list/: CMakeLists.txt  diag_list_length.c  diag_list_reverse.c  diag_list_to_vector.c
test/port/: CMakeLists.txt  diag_port_copy_diff.c  diag_port_new_bm.c  diag_port_new_fd.c  diag_port_new_fp.c  diag_port_new_path.c
test/rbtree/: CMakeLists.txt  diag_rbtree_for_each_attr.c  random.c  sanity02.c  sanity10.c
test/set/: CMakeLists.txt  diag_set_contains.c  diag_set_erase.c  diag_set_insert.c
test/singlelinkage/: CMakeLists.txt  onetwothree.c
test/system/: CMakeLists.txt  process.c
test/trie/: CMakeLists.txt  diag_trie_new_and_destroy.c  diag_trie_traverse.c
test/vcdiff/: CMakeLists.txt  diag_vcdiff_contract.c  diag_vcdiff_decode.c  diag_vcdiff_expand.c  diag_vcdiff_read.c  empty.vcdiff  hello.vcdiff  rfc3284.txt.head  rfc3284.txt.vcdiff.1  rfc3284.txt.vcdiff.2
test/vector/: CMakeLists.txt  diag_vector_copy.c  diag_vector_copy_from.c  diag_vector_for_each.c  diag_vector_length.c  diag_vector_pop_back.c  diag_vector_push_back.c
